@@ -30,7 +30,11 @@ import games.strategy.engine.delegate.IDelegate;
 import games.strategy.engine.message.IRemote;
 import games.strategy.triplea.attatchments.PoliticalActionAttachment;
 
+import java.util.Collection;
+
 public interface IPoliticsDelegate extends IRemote, IDelegate
 {
 	public void attemptAction(PoliticalActionAttachment actionChoice);
+	
+	public Collection<PoliticalActionAttachment> getValidActions();
 }
